@@ -34,15 +34,16 @@
 
 example:
 
->>> import univention.debug as ud
->>> ud.init("stdout", ud.NO_FLUSH, ud.FUNCTION) #doctest: +ELLIPSIS
+>>> f = init('stdout', NO_FLUSH, FUNCTION) #doctest: +ELLIPSIS
 ... ...  DEBUG_INIT
->>> ud.set_level(ud.LISTENER, ud.ERROR)
->>> ud.debug(ud.LISTENER, ud.ERROR, 'Fatal error: var=%s' % 42) #doctest: +ELLIPSIS
-... ...  LISTENER    ( ERROR   ) : Fatal error: var=42
+>>> set_level(LISTENER, ERROR)
 """
 
 from __future__ import absolute_import
+import sys
+from functools import wraps
+from itertools import chain
+from warnings import warn
 from univention import _debug
 from univention._debug import *  # noqa F403
 
@@ -69,6 +70,9 @@ class function(object):
 	:param str fname: name of the function starting.
 	:param bool utf8: Assume the message is UTF-8 encoded.
 
+	.. deprecated:: 4.4
+	   Use function decorator :py:func:`trace` instead.
+
 	>>> def my_func(agr1, agr2=None):
 	...    _d = function('my_func(...)')
 	...    return 'yes'
@@ -77,6 +81,7 @@ class function(object):
 	"""
 
 	def __init__(self, fname, utf8=True):
+		warn('univention.debug.function is deprecated and will be removed with UCS-5', PendingDeprecationWarning)
 		self.fname = fname
 		_debug.begin(self.fname)
 
@@ -85,6 +90,63 @@ class function(object):
 		Log the end of function.
 		"""
 		_debug.end(self.fname)
+
+
+def trace(with_args=True, with_return=False, repr=object.__repr__):
+	"""
+	Log function call, optional with arguments and result.
+
+	:param bool with_args: Log function arguments.
+	:param bool with_return: Log function result.
+	:param repr: Function accepting a single object and returing a string representation for the given object. Defaults to :py:func:`object.__repr__`, alternative :py:func:`repr`.
+
+	>>> @trace(with_args=True, with_return=True)
+	... def my_func(arg1, arg2=None):
+	...     return 'yes'
+	>>> my_func(42)
+	'yes'
+	>>> class MyClass(object):
+	...     @trace(with_args=True, with_return=True, repr=repr)
+	...     def my_meth(self, arg1, arg2=None):
+	...         return 'yes'
+	>>> MyClass().my_meth(42)
+	'yes'
+	>>> @trace()
+	... def my_bug():
+	...     1 / 0
+	>>> my_bug()
+	Traceback (most recent call last):
+		...
+	ZeroDivisionError: integer division or modulo by zero
+	"""
+	def decorator(f):
+		@wraps(f)
+		def wrapper(*args, **kwargs):
+			fname = '%s.%s' % (f.__module__, f.__name__)
+			_args = ', '.join(
+				chain(
+					(repr(arg) for arg in args),
+					('%s=%s' % (k, repr(v)) for (k, v) in kwargs.items()),
+				)
+			) if with_args else '...'
+
+			_debug.begin('%s(%s): ...' % (fname, _args))
+			try:
+				ret = f(*args, **kwargs)
+			except:
+				try:
+					(exctype, value) = sys.exc_info()[:2]
+					_debug.end('%s(...): %s(%s)' % (fname, exctype, value))
+				finally:
+					exctype = value = None
+				raise
+			else:
+				_debug.end('%s(...): %s' % (fname, repr(ret) if with_return else '...'))
+				return ret
+
+		return wrapper
+
+	return decorator
 
 
 if __name__ == '__main__':
